load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/minorhacks/rbe_meter
# gazelle:go_naming_convention_external import
# gazelle:exclude pkg/proto/configuration/*/*.go
# gazelle:resolve proto go pkg/proto/configuration/grpc/grpc.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc
# gazelle:resolve proto pkg/proto/configuration/grpc/grpc.proto @com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto

gazelle(
    name = "gazelle",
)
