load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "metered",
    srcs = [
        "interceptor.go",
        "server.go",
    ],
    importpath = "github.com/minorhacks/rbe_meter/pkg/metered",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_golang_protobuf//proto",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
