load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "metrics",
    srcs = ["interval_push.go"],
    importpath = "github.com/minorhacks/rbe_meter/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/rbe_meter:rbe_meter_go_proto",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_client_golang//prometheus/push",
        "@com_github_prometheus_common//expfmt",
    ],
)
