load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proxying",
    srcs = ["proxying.go"],
    importpath = "github.com/minorhacks/rbe_meter/pkg/proxying",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
    ],
)
