load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "rbe_meter_proto",
    srcs = ["rbe_meter.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc:grpc_proto"],
)

go_proto_library(
    name = "rbe_meter_go_proto",
    importpath = "github.com/minorhacks/rbe_meter/pkg/proto/configuration/rbe_meter",
    proto = ":rbe_meter_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc"],
)
